Try again with secret.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
+# with hidden.py it failed
+# maybe because I uploaded first and tried to remove later
 hidden.py
+
+# I try again with secret.py
+secret.py
