--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@
 # maybe because I uploaded first and tried to remove later
 hidden.py
 
-# I try again with secret.py
+# I try again with secret.py. Seems to work.
 secret.py
